		code documentation main page, and a simple picture of what the
		component tree may look like.
		Introducing "visible class names" in addition to the normal
		class name, for components. This makes mips_cpu0 show up as
		just cpu0, which is much nicer.
		uint16_t, 32_t, and 64_t state variables are now outputted in
		hexadecimal form in ToString(), for readability.
		The ListComponents command now shows the short description of
		each command.
		Links are now generated from component names in machines.html
		to corresponding component_xxx.html pages.
		Beginning on internal support for instruction disassembly (not
		user-accessible yet).
20080407	Continuing on the instruction disassembly stuff; importing
		some MIPS defines from GXemul 0.4.6.3.
20080409	Implementing support in the CommandInterpreter for running
		methods on components. If a component name is "executed" with
		no method name given, the component tree is dumped. (This means
		that there is no need for the 'tree' command anymore, so it
		has been removed.)
		Implementing the first component method: "unassemble" for the
		CPUComponent.
		GTKMM GUI test: Connecting to the "activate" signal of a text
		entry, so that commands are executed once ENTER is pressed;
		this does not work with tab-completion and command line
		editing though, since only ENTER is signaled.
20080410	CPUComponent's unassemble method now remembers where it last
		unassembled, and starts at m_pc if it is the first time it
		is executed.
		Porting more MIPS-related code from GXemul 0.4.6.3; some
		more instructions can be disassembled now.
20080412	Implementing tab-completion of methods on components.
		Executing a component name without any method name, which
		results in the component tree being dumped, will now also
		dump all of the component's state variables.
		Continuing on porting GXemul 0.4.6.3's MIPS disassembly code.
		The GTKMM GUI can now be shut down by the "quit" command.