@@ -371,9 +371,6 @@ GTKMM GUI
 
 	[ ]  Command input window!  Make it look nice.
 
-	[ ]  Make the Play (and Pause?) buttons stay down, if the RunState
-	     is in specific states.
-
 	[ ]  Open and Save should have Open/Save as the default button, so that
 		pressing Enter works!
 
@@ -423,8 +420,8 @@ GTKMM GUI
 	     [ ]  Step backwards
 	     [ ]  Step forward
 	     [ ]  Run backwards...
-	     [/]  Run (start emulation)
-	     [/]  Pause (pause emulation, button kept down until unpaused)
+	     [X]  Run (start emulation)
+	     [X]  Pause (pause emulation, button kept down until unpaused)
 	     [ ]  Reset (with a dialog asking for confirmation)
 	     [X]  Undo/Redo!
 	     (Optional plug-in-ability/extensibility. Buttons should
